# kodlab-uma-encapsulated

./: .gitignore  build_dependency.bat  build_dependency.sh  build_kernel.sh  build_vs.bat  readme.txt  set_env.bat  set_env.sh
03182017/: Agent.cpp  Agent.h  AgentDM.cpp  AgentDM.h  UMATest.cpp  UMATest.h  kernel.cu  logging.cpp  logging.h  sniffy_1d.py  unit_test.py  unit_test_wrapper.py  wrapper.py
03182017/Unit_Test_Data/: test_data.py
03182017/Unit_Test_Data/data_gen/: gen_orient_all.py
SUMO_based_HVT_tracker/: Agent.cpp  Agent.h  AgentDM.cpp  AgentDM.h  UMA_NEW.i  kernel.cu  logging.cpp  makefile.sh  sniffy_1d.py  som_platform.py  wrapper.py
dependency/googletest-release-1.8.0/: CMakeLists.txt
deployment/: cluster_setting.py  deploy.yml  deploy_UMA.py  run_UMA.py  stop_UMA.py
lib/: readme.txt
one_hole/: #mobs.py#  Agent.cpp  Agent.h  UMA_NEW.i  UMA_NEW.py  UMA_NEW_wrap.cpp  kernel.cu  log.txt  makefile  one_hole.py  one_hole.py~  readme.txt  snapshot_platform_new.py  snapshot_platform_new.py~  verification_new.py  worker.cpp  worker.h  wrapper.py  wrapper.txt
pylib/UMA/: som2.py  som2_dang.py  som2_noEP.py
pylib/client/: Service_Agent.py  Service_Experiment.py  Service_Sensor.py  Service_Snapshot.py  Service_World.py  UMARest.py  UMA_service.py
pylib/perf/: resource.py
slhc/: DataManager.cpp  DataManager.h  Header.h  Pair.cpp  Pair.h  World.cpp  World.h  dslhc.i  kernel.cu  link.bat  readme.txt  setEvn.sh  wrapper.py
slhc/src/: DataManager.cpp  DataManager.h  Header.h  Pair.cpp  Pair.h  World.cpp  World.h  dslhc.i  kernel.cu  logManager.cpp  logManager.h  logging.cpp  logging.h  make.sh
slhc/suites/: HEC.py  add_remove.py  ent.py  hec_plot.py  make_preamble.py  module_ellone.py  module_ellone_bool.py  module_elltwo.py  module_elltwo_norm.py  module_scenario.py  poison.py  slhc_GPU_wrapper.py
src/: Agent.cpp  Agent.h  CMakeLists.txt  Snapshot.h  kernel.cu  logging.cpp  logging.h  som_platform.py  unit_test.py  worker.h  wrapper.txt
src-Dan/: Agent.cpp  Agent.h  Snapshot.cpp  Snapshot.h  UMA_NEW.i  experiment_one.py  kernel.cu  logging.cpp  logging.h  makefile.sh  one_hole.py  snapshot_platform_new.py  verification_new.py  worker.cpp  worker.h  wrapper.py
src-Sahan/: Agent.cpp  Agent.h  Snapshot.cpp  Snapshot.h  UMA_NEW.i  experiment_one.py  kernel.cu  snapshot_platform_new.py  verification_new.py  worker.h
src-linux/: Agent.cpp  Agent.h  AgentDM.cpp  UMATest.cpp  UMATest.h  UMA_NEW.i  kernel.cu  logging.h  makefile.sh  sniffy_1d.py  sniffy_2d.py  unit_test_wrapper.py  wrapper.py
src-linux/Unit_Test_Data/data_gen/: gen_update_weights.py
src-rest/src/RESTful/: AdminHandler.cpp  AdminHandler.h  DataHandler.cpp  DataHandler.h  DataValidationHandler.cpp  DataValidationHandler.h  ObjectHandler.cpp  ObjectHandler.h  SimulationHandler.cpp  SimulationHandler.h  listener.cpp  listener.h
src-rest/src/common/: Global.h
src-rest/src/core/: Agent.cpp  Agent.h  Measurable.cpp  Measurable.h  MeasurablePair.cpp  MeasurablePair.h  Sensor.cpp  Sensor.h  SensorPair.cpp  SensorPair.h  Snapshot.cpp  Snapshot.h  World.cpp  World.h  main.cpp
src-rest/src/cuda/: kernel.cu
src-rest/src/logging/: logManager.cpp  logManager.h
src-rest/src/test/: UMATest.cpp  UMATest.h
src-rest/suite/sniffy/: client.txt  client_test.py  sniffy1d.txt  sniffy_1d.py  sniffy_1d_ae.py  sniffy_1d_auto_enrich.py  sniffy_1d_complete.py  sniffy_1d_debug.py  sniffy_1d_read.py
src-windows/: Agent.cpp  Agent.h  AgentDM.cpp  Global.h  Measurable.cpp  Measurable.h  MeasurablePair.cpp  MeasurablePair.h  Sensor.cpp  Sensor.h  Snapshot.cpp  Snapshot.h  UMA.i  UMA_NEW.i  kernel.cu  link.bat  logManager.cpp  logManager.h  logging.cpp  logging.h  sniffy_1d.py  sniffy_1d_ae.py  som_platform.py  unit_test.py  wrapper.py
src/RESTAPI/: AgentHandler.cpp  AgentHandler.h  AttrSensorHandler.cpp  AttrSensorHandler.h  CMakeLists.txt  DataHandler.cpp  DataHandler.h  ExperimentHandler.cpp  ExperimentHandler.h  MeasurableHandler.cpp  MeasurableHandler.h  SensorHandler.cpp  SensorHandler.h  SimulationHandler.cpp  SimulationHandler.h  SnapshotHandler.cpp  SnapshotHandler.h  WorldHandler.cpp  WorldHandler.h  main.cpp
src/RESTful/: CMakeLists.txt  RestUtil.cpp  RestUtil.h  UMARestClient.cpp  UMARestClient.h  UMARestHandler.cpp  UMARestHandler.h  UMARestListener.cpp  UMARestListener.h  UMARestRequest.cpp  UMARestRequest.h
src/RESTfulTest/: CMakeLists.txt  UMARestTest.cpp  UMARestTestFixture.cpp  UMARestTestFixture.h
src/Unit_Test_Data/: test_data.py
src/common/: Global.h  UMARest.h  kernel.h
src/core/: Agent.cpp  Agent.h  AttrSensor.cpp  AttrSensor.h  AttrSensorPair.cpp  AttrSensorPair.h  CMakeLists.txt  CoreService.cpp  CoreService.h  DataManager.cpp  DataManager.h  Experiment.cpp  Experiment.h  Measurable.cpp  Measurable.h  MeasurablePair.cpp  MeasurablePair.h  Sensor.cpp  Sensor.h  SensorPair.cpp  SensorPair.h  Simulation.cpp  Simulation.h  Snapshot.cpp  Snapshot.h  UMACoreConstant.cpp  UMACoreConstant.h  UMACoreObject.cpp  UMACoreObject.h  UMACoreService.cpp  UMACoreService.h  World.cpp  World.h
src/coreTest/: CMakeLists.txt  UMACoreTest.cpp  UMACoreTestFixture.cpp  UMACoreTestFixture.h
src/kernel/: CMakeLists.txt  data_util.cpp  data_util.cu  data_util.h  device_util.cu  device_util.h  kernel_util.cu  kernel_util.cuh  uma_base.cu  uma_base.cuh
src/kernelTest/: CMakeLists.txt  UMAKernelTest.cpp
src/launcher/: CMakeLists.txt  launcher.c
src/utility/: CMakeLists.txt  ConfReader.cpp  ConfReader.h  ConfService.cpp  ConfService.h  LogService.cpp  LogService.h  Logger.cpp  Logger.h  PropertyMap.cpp  PropertyMap.h  PropertyPage.cpp  PropertyPage.h  UMAException.cpp  UMAException.h  UMAutil.cpp  UMAutil.h
src/utilityTest/: CMakeLists.txt  UMAUtilTest.cpp
src_rest2/: readme  restmap.ini
src_rest2/ini/: log.ini  restmap.ini
suite/sniffy/: UMA_Sandbox.py  UMA_sniffy.py  sniffy_1d.py  sniffy_1d_auto_target.py  sniffy_encapsulated.py  test_launcher.py
suites/sniffy/: UMA_sandboxQ1.py  UMA_sandboxQ2.py  UMA_sniffy.py  sniffy_encapsulated.py  test_launcher.py  test_plotter.py
(+138 files in other folders)
